--- a/main.tex
+++ b/main.tex
@@ -667,8 +667,8 @@ confirms the above Planck's wall breakdown.
 \section{The Arithmetical Logic: Holic Principle}
 
 In the hypothesis of an Arithmetic Cosmos, the ultimate equations must be diophantine. The
-simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are co-
-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
+simplest one is $T^{2} = L^{3}$, where $T$ is a time ratio and $L$ a length one, resolved, since 2 and 3 are 
+co-prime, by $$T^{2} = L^{3} = N^{6}$$ where N is a whole number, meaning the classical 6D space of classical point mechanics. Considering the exponents, this particularizes the usual 3D space, but attribute 2 dimensions for the Time, in conformity with an independent study \cite{Bars}.
 
 This is the degenerate arithmetic form of the spatio-temporal holographic principle.
 
@@ -684,16 +684,13 @@ where $M$ is a mass ratio. Recall that the lifetime of an unstable particle depe
 This is called the Holic Principle, relating to the apparent world. The Complete Holic
 Principle involves a field term $F^{7}$, and so introduces the dimension $30 \times 7 = 210$. It is confirmed by (to 15 ppm, 1.1 ppm, 56 ppm):
 $$2/\delta \approx (R/\lambdabar_{e})^{1/210} \approx (1/2d_{e}) ln(pH)/lna \approx (1/d_e^{2})ln\tau/ln\mu$$
-where appear the masses of the heavy leptons (Section 4.6). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 4.1).
-
-
-
+where appear the masses of the heavy leptons (Section 9.5). This implies a dramatic geo-combinatorial relation between $a$ and $p$ : $p^{p^{2}} \approx (a^{2})^{a^{3}}$ and confirms the central computational role of $\delta = R^{\prime}/R = pH/a^{3}$, which is to 1.6 ppm:$\delta \approx e^{2/e^2}$, confirming the central role of $e$ (section 9.1).
 
 \section{Special holographic relations}
 The holographic technique is by far the most efficient way to treat huge information, based on the
-properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism : it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
+properties of a coherent wave. Now, the main lesson of modern physics is that everything (light and matter) propagates by waves  (quanta appearing only at the detection). Moreover, a coherent wave is represented by a unitary matrix of quantum mechanism: it has been shown that the quantum formalism is very similar to the holographic one, describing an intreaction by a two-step holographic process. From these consideratiosn a mass for the photon (confirmed in section 4.1) and graviton has been proposed \cite{Sanchez1}, and are in definite places in the Topological Axis (fig. 1)
 
-A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck legth and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
+A Holographic Principle has been coined by some theoricians \cite{Bousso}, the name coming from the idea of dimension reduction, from 3D to 2D, similar to the visual impression in current visible holograms (in fact holography is only the 2D restitution of a propagating wave). It this respect, it is strange that no one tried to extend this process to 1D (an idea of temporal holography proposed in the author's thesis in 1975): this is the subject of Section 3, but using only the Planck length and the topon. It is natural to suppose that they are other holographic wavelengths. In fact \textit{the Topological Axis is the reunion of height 1D-2D holographic relations}. We present here three more significant examples. 
 
 \subsection{The Conservation of Information}
 
@@ -706,8 +703,7 @@ Since the holographic technique uses coherent radiation, this seems incompatible
 thermal character. But \textit{in a totally deterministic cosmos, there is no paradox}. This question is
 connected with the black hole information paradigm \cite{Preskill}. Independently of our approach, an
 argument in favor of a total conservation of information was tied to a non-evolution cosmology
-\cite{Nikolic}, Moreover, we have shown that the formalisms of Holography and Unitary Matrix Quantum
-Physics are very similar \cite{Sanchez1}. 
+\cite{Nikolic}. 
 
 Note that $e^{a}$ is also compatible with the half volume of the proton, with
 the Planck length as unit.
@@ -715,7 +711,6 @@ the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
-\subsection{The Cosmic Temperature}
 
 \subsection{The Cosmic Temperature}
 
@@ -729,17 +724,17 @@ background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p
 This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
 $$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
 which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 9.2). Recall
 that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
 the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
-\subsection{The Cosmic Coherent Oscillation and the Holic Principle}
+\subsection{The Cosmic Oscillation and the Holic Principle}
 
 While the HB entropy of the sphere of radius $R^{\prime} = 2r_e^3 / l_P^ 2$, where $r_e = \lambdabar_e /a $ is the electron classical radius, which is the holographic reduction of the Grandcosmos (section 3), verifies the relation:
 \begin{equation}
 \pi(R^{\prime}/l_P)^2 = (pi/2)(R^{\prime}/r_e)^3 
 \end{equation}
-With a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecion $\sqrt{4/3\delta} \approx 0.17$:
+with a wrong geometric coefficient, the HB entropy of the visible Universe shows a nearly geometric term, with imprecion $\sqrt{4/3\delta} \approx 0.17$:
 \begin{equation}
 \pi(R/l_P)^2 \approx (2\pi/3)(R/r_e)^3 
 \end{equation}
@@ -753,21 +748,21 @@ which is an holographic conservation concerning \textit{the half-sphere of the v
 
 The deviation of Eq. (28) is very close to that of Eq.(10), inducing, to 17 ppm and 13 ppm: 
 \begin{equation}
- (R_G{C}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
+ (R_{GC}l_P/Rr_e)^2 \approx (R_1l_K/Rr_e)^3 \approx \mu^{35}(p/H)^2/ln2
 \end{equation}
-showing a holic form, involving the Muon/Electron mass ratio (see section 9.5).
-Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (see Eq. 68) (17 ppm and 1.8 ppm) :
+showing a holic form, involving the Muon/Electron mass ratio $mu$ (see section 9.5).
+Taking account of the identity: $2l_P^2 = \lambdabar_M R = (R^{\prime}r_e)^2/(R_GC)l_P)^2$, this leads to a number reduced in the ratio $\delta^3$, where the forth root shows the Koide constant $p_K$, characteristic of the two Heavy Leptons (Eq. 68) (17 ppm and 1.8 ppm) :
 \begin{equation}
 r_/\lambdabar_M \approx (R_1l_K/R^{\prime}r_e)^3 \approx (4\pi P/p_K)^4
 \end{equation}
-The above term $R_1l_K/R^{\prime}r_e$ is close to $\sqrt{O_M}$ (1\%). The study of deviation, taking account of Eq.(), shows the intermediate bosons ratios $W$ and $Z$, specified in section 9.4, leading to (-4 and 3.5 ppm):
+The above term $R_1l_K/R^{\prime}r_e$ is close to (1\%) $\sqrt{O_M} \approx 2a^2P$ (0.18 \%). The study of deviations shows the intermediate bosons ratios $W$ and $Z$, withy values specified to the ppb range in section 9.4, leading to (-4 and 3.5 ppm):
 \begin{equation}
 O_M (FR^{\prime}/PR_1)^2 \approx W^4 (137/a)^3
 \end{equation}
 \begin{equation}
  (F^3R_1 / 2 a^3R^{\prime})^2 \approx Z^4 (a/137)(p_0/p)^2
 \end{equation}
-Thus, Eq. () is completed by (0.3 and -0.4 ppm)
+Thus, (0.3 and -0.4 ppm)
 \begin{equation}
 137 p_0 W^2 Z^2/p a_w^2 \approx \sqrt{O_M}/(2a^2 P) \approx e^{-4a}
 \end{equation}
@@ -810,11 +805,12 @@ ln137/ln(a/137) \approx (2+135/d_{e})^{2}
 meaning the ratio $a/137$ acts as a canonical ratio. Indeed, the Bizouard constant $f$, precizing \cite{Sanchez1} the inverse of the standard 'strong coupling constant' 0.1184(7): $$f = a_w/2\pi(pH)^{3/2} \approx 8.43450$$ appears as a computation basis, in the following dramatic relations, to 0.3, 0.2, 0.7 \% and 22 ppb ! (confirmation of $G$ value):
 $$(a/137)^F \approx 3^a \approx f^{f^2}/\pi \approx (O_B/f)^2 \approx P^4 (2/3)^a (p/p_0)^2 $$
 proving that the base 3, \textit{the optimal whole number basis}, is also used by the Cosmos as well as $O_B$, the cardinal order  of the Baby Monster (as confirmed below). 
-Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{prime}/\lambdabar_e \approx 27^{27}, with 27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
+Note that while $R/\lambdabar_e \approx 2^{128}$, to 0.6 \%, $R^{\prime}/\lambdabar_e \approx 27^{27}$, with $27 = 3^3$ to 0.03 \%  Moreover, to 27 ppb:
 $$ a/(a-1) \approx 3^{1/150} $$
 Thus, the basis 3 makes a liaison between $a/137$ and $a/(a-1)$, very close (2 ppm) to the Bond factor 137/136, central in Eddington's theory \cite{Eddy}.
+
 \subsection{Atiyah and Sternheimer constants}
-    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 2.3.1) single-electron cosmical formula (0.3 ppm):    
+    Sir Michael Atiyah was a precurseur in the search for unity in Mathematics and Physics. His last work in this domain introduced the constant $$\Gamma = \gamma a /\pi$$ as a simplification term \cite{Atiyah1}. Indeed $\Gamma$ and the canonical $e^{\pi}$ enter the following dramatic simplification of the above (Section 4.1) single-electron cosmical formula (0.3 ppm):    
 \begin{equation}
 a = (p/H)((ln(R_1/\lambdabar_e) + \gamma – 1)/(\pi^2/6 - 1)) \approx ln(R/\lambdabar e) + \Gamma + e^{\pi}
 \end{equation}
@@ -836,11 +832,11 @@ It is also exhibited in the following holographic relation:
 \begin{equation}
 (4\pi/3) B^3 \approx \pi(F^3/a)^2,
 \end{equation}
-while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters, the 'forgotten' electromagnetic power $E_e^2/\hbar A$, in the Hydrogen atom, with $E_e = m_ec^2$.
+while $F^3/(44\pi)$ is close, to 0.01 \%, to the term $A = (3/2) a^7$, which enters the 'forgotten' electromagnetic power $E_e^2/\hbar A$, in the Hydrogen atom, with $E_e = m_ec^2$.
 Note that, to 10 ppm and 2 ppm:
-\begin{equation}
+$
 (H/n)^2(F^2/B)^3 \approx (4/3) a^2 \approx W/2\pi \beta^4
-\end{equation}
+$
 where $W$ is the W boson-Electron mass ratio (see Section 4). Now, to 30 ppm and 20 ppm :  
 \begin{equation}
  (F^3/a)^2 \approx (P/FH^2)^3  \approx  (a/137)(4\pi/3)(F^2/p^{1/2})^3 
@@ -849,28 +845,28 @@ Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen 
 \begin{equation}
 \sqrt{\beta} F^3/a^{\prime} \approx (e/3)(e/2)^j  \approx (3/\pi) 4^{\Gamma}
 \end{equation}
-confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e., as privileged exponents. This call for further study.
+confirming that $j$ and $\Gamma$ are generalised dimension, i.e., as privileged exponents, calling for further study.
 
 Note that (Fig 1.):
 \begin{equation}
 m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
 \end{equation}
-seems compatible with the Higgs Boson energy, it is interesting to note the match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30ppb.
-The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich cycle. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
+seems compatible with the Higgs Boson energy, matching with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30ppb.
+The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich period. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
 $$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
 meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
 One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
 $$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
-(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the 20th power of $F$, corresponding to the 20 normal amino-acids.  
+(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the $20^{th}$ power of $F$, corresponding to the 20 normal amino-acids.  
 
-\subsection{Ubiquity of $a^{a}$}
+\subsection{The ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
-From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in theb Eddington matrix, it must be interpreted as a dimension, a privilegied exponent. \textit{So the term $a^a$ must be central}.
+From the Computation Hypothesis, $a$ must be an optimal basis, and, as seen above, 137 being is a number of parameters in the Eddington matrix, it must be interpreted as a dimension, a privilegied exponent. \textit{So the term $a^a$ must be central}.
     
-Indeed, $a^a$, apart a $\pi$ factor, in the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.04 \%:
+Indeed, $a^a$, apart a $\pi$ factor, is the Grandcosmos volume with unit length the Hydrogen radius, to 0.4 and 0.5 \%:
 \begin{equation}
-(4\pi/3)(R_{GC}/r_H)^3 \approx a^a/\pi \approx (1/ln2)^{1836.5}
+(4\pi/3)(R_{GC}/r_H)^3 \approx a^a/\pi \approx 3(1/ln2)^{\sqrt{pH}}
 \end{equation}
 Note that the ln2 factor involves information theory.
 Moreover, the dramatic relation $a^a\approx e^{p/e}$ has been connected with the fifth optimal musical scale (306 notes) and to the operational definition of $e$ \cite{Sanchez1}. Thus it seems interesting here to look for its manifestations in classical mathematics. 
@@ -880,7 +876,7 @@ starting from $N = 4 = u_{3} + 1/u_{3}$ , with $u_{3} = \sqrt{3} + 2$, belonging
 \begin{equation}
 u_{3}^{2^9} \approx (2(137^{2} + 48))^{64} \approx a^{a}
 \end{equation}
-defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see the following sub-section).
+defining $a$ to 39 ppm and showing that the Rydbergh term $2a^2$ plays a central role (see Eq.(33)).
 
 Also, with the Pell-Fermat generator $u_{1} = 1 + \sqrt{2}$:
 \begin{equation}
@@ -891,18 +887,11 @@ simplest arithmetics generators. This opens a \textit{new research in pure mathe
 
 Remark that the $12^{th}$ Pell-Fermat number is $ u_1^{12}/2 \approx 140^2 + 1 \approx a(a+6)$ to 4 ppm. So, this comes back to the antique problem of the rationalisation of $\sqrt{2}$. Its correct value shows a $8^{th}$ fractional term very close to $\sqrt{5}$, so leading to $\sqrt{2}_a \approx N_{a}/D_{a}$, with $ N_{a} = 239 \sqrt{5} + 99 \approx \Gamma^{2}
 \approx O_B^{1/12} $ and $ D_{a} = 13^2 \sqrt{5} + 70 \approx O_M^{3/61}$,
-so connecting the two Monster's orders, because $61/2 \approx F/a^{2}$ to 0.04 \%.
-This introduces the next section.
+so connecting $O_M$ and $O_B$, since $61/2 \approx F/a^{2}$ to 0.04 \%, and introducing the next section.
 
 \subsection{The Sporadic Groups}
 
-The above main term of Eq. (34) $2a^{2} = m_{e} c^{2}/E_{Ryd}$ is
-tied to the Rydbergh energy's principal value $E_{Ryd}$ whose ratio with the Planck energy is closely
-related to the Monster group cardinal order, to 1.5 ppm:
-\begin{equation}
-O_{M} e^{-1/2a} \approx (E_{P} /E_{Ryd})^{2} = \hbar Gc^{5}/E_{Ryd}^{2}
-\end{equation}
-Moreover the above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
+The above term $O_M^3$ appears in (0.08\%, 2.5\%,1\%, 2\% and 61 ppm):
 \begin{equation}
 e^{137e}\approx (e/3)e^{ea}\approx O_M^3 \approx 496^{60} \approx fe^{16e^\pi} \approx f^{4d137/\pi}
 \end{equation}
@@ -926,26 +915,26 @@ O_B \approx (a/\Gamma)^{a/3}
 \end{equation}
 where $a/\Gamma = \pi/\gamma $ is the canonical Atiyah ratio.
 
-The total product of the 26 sporadic orders $\Pi_{26}$ verifies, to 1.8 ppm:
-$$ \Pi_{26} \approx (9/2)(R_{GC}np_0/\lambdabar_M p^2)$$
+The total product of the 26 sporadic orders $\Pi_{26}$ verifies, with n the neutron/electron mass ratio, to 1.8 ppm:
+$$ \Pi_{26} \approx (9np_0/2p^2)(R_{GC}/\lambdabar_M )$$
 Now $\Pi_{26}$ is close to $e^{4 \times 210}$, whose $a^{th}$ root is again very remarkable (65ppm, 98 ppm, 5 ppb):
 \begin{equation}
 e^{4 \times 210/a} \approx 2e^{2e} \approx H/4 \approx 26 \times (2 \times 26 + 1)/3
 \end{equation}
 The ppb range precision of the last term means clearly that a rationalisation of $e^{2e}$ is occuring, where the canonic dimension 26 plays a central role.
 
-Note that, in Eq. (40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.7\%:
+Note that, in Eq.(40), $j/496 \approx 0.229$ is close to the weak mixing angle, but $p/g_0 \approx 0.232$ is closer to the measured value 0.23116(12) \cite{Tanabashi}, where $g_0 = 7920 $ is the smallest Matthieu sporadic group order. These ratios appear as calculation basis in the product of cardinal orders of the Monster and the baby-Monster groups, to 1\%, 0.2 \%, 1 \% and 0.7\%:
 \begin{equation}
 O_MO_B\approx H^{2H/a} \approx (g_0/p)^a \approx (496/j)^{137} \approx \sqrt{2}(e496^2)^{15}
 \end{equation}
-confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $$n_{ph}\approx (3/\pi) exp(e^6/2)$$ (to 0.2 \%) is the photon number in the visible universe. 
+confirming the central role of 496. Note also (0.1 \%) that $O_MO_B \approx  n_{ph}/\delta^{1/2}$, where $n_{ph}\approx (3/\pi) exp(e^6/2)$ (to 0.2 \%) is the photon number in the visible universe. 
 
-From the Eqs (38), (42) and (44), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $$496/j \approx (ae^e/\Gamma)^{1/3}$$
+From the Eqs (38), (42) and (44), by taking the $137^{th}$ root, one obtains, to 0.03 \%: $496/j \approx (ae^e/\Gamma)^{1/3}$
 Now $ae^e/\Gamma$ is close to $2ed_e$. More precisely (0.7 ppm):
 \begin{equation}
 a/\Gamma = \pi/\gamma \approx 2d_e \times e (p_0/p)^2 
 \end{equation}
-Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$}. It is remarkable this is obtained from singularities involving the two Monster groups. This introduces the next section.
+Thus, \textit{the Atiyah symmetry infers a relation between the three mathematical constants $e$, $\pi$ and $\gamma$ and the Electron magnetic moment $2d_e$}. It is remarkable that this is obtained from singularities involving the two Monster groups. This introduces the next section.
 
 \section{Fine-tuning with basic mathematical constants}
 %\markright{F.M.Sanchez,\ V.A.Kotov,\ M.Grosmann,\ D.Weigel,\ R.Veysseyre,\ C.Bizouard,\ N.Flawisky,\ D.Gayral,\ L.Gueroult,\ Back to Cosmos}
@@ -956,7 +945,7 @@ relations with mathematical constants such as $e$, $\pi$ and $\gamma \approx
 0.577215665$, the Euler-Mascheroni constant, which appears already in the above single-electron
 cosmic radius and the Topological Axis.
 
-\subsection {The optimal calculation basis $e$ confirmed}
+\subsection {The optimal calculation base $e$ confirmed}
 
 The Topological Axis shows clearly that the Grandcosmos is defined by the following conjunction (1\%):
 \begin{equation}
@@ -975,7 +964,7 @@ e^{e^e}\approx (lnp)^{lnp}
 $$
 Note that $e^2$ is the limit of the following musical series:
 $$(3/2)^5 \approx (4/3)^7   \approx (5/4)^9  \approx  (6/5)^{11}  \approx   ...  \approx  (1+1/n)^{2n+1}  $$  
-a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale
+a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$. The first two terms defines the occidental 12 tones scale.
 
 The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Extended Holographic Principle, to 0.04 \%:
 \begin{equation}
@@ -991,22 +980,23 @@ of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ a
 
 A confirmation of a symmetry between $a$ and 137 is the following relation involving $H$, the
 Hydrogen electron mass ratio, precise to 83 ppb:
-$$a/137 \approx (6\pi^{5} H)^{1/2} /p$$
+$$a/137 \approx (p_0 H)^{1/2} /p$$
 One observes that the rejection of Wyler's work, due to a non-perfect formula for the $p$ and $a$ values, is a new
-manifestation of the general neglectance of the Hierarchy Principle.
+manifestation of the general neglectance of the Principle of Hierarchy.
 
 A confirmation of a symmetry between $a$ and 137 is the two following approximations for $p$ with the same imprecision 80 ppb, so leading to the ppb relation:
  $$p \approx (137/a) (p_0 H)^{1/2}  \approx EH^3/d_e^2jFD $$ 
 where $D = 196883$ is the Moonshine Monster dimension \cite{Conway}, which appears also, to $10^{-7}$, to be $(\pi_p P/d_eF)^{1/2}/H$, with $\pi_p = (p/6)^{1/5}$, so confirming again the pertinence of Wyler's approach. 
 
-Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $, with $n$ the neutron-electron mass ratio. This leads to (0.012 \%) $$6\times 5^5 \approx (aH/n)^2 $$  
+Note also that the Lenz-Wyler formula is nothing but the product of the area by the volume of a cube with side $\pi $. If one consider a cube with side 5, privileging again the identification dimension = exponent, this gives $6 \times 5^5 = 137^2 - 19 $. This is not a chance coincidence, because this relation has long time been deduced from basic considerations on quarks \cite{Sanchez1}. Indeed with $u = 5 $ and $d = 6 $, the combination $uud = 150 $, which power 3/2 is close to $H$, while the combination $udd \approx (n/a)^2 $. This leads to (0.012 \%) $6\times 5^5 \approx (aH/n)^2 $  
 Note that, with $q = 2^{12}$ to 0.03 \%, 2.5 \% and 41 ppm:
 $$R_{GC}/\lambdabar_e \approx q\times 5^{137} \approx 6^{137}/q^2 \approx 6^{128}/(1+1/\sqrt2)$$
-Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tacyonic celerity ratio (0.01\%) 
-$$ C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide constant (see Eq.60). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It an ewample of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out.
+Since $R/\lambdabar_e \approx 2^{128}$, the decomposition of 6 leads to a natural Universe-Grandcosmos partition, and to the following approximation for the tachyonic celerity ratio (0.01\%) 
+$$ C/c\approx3^{128} (p_K/p_G \delta)^2 $$ where $p_K$ is the Koide constant (see section 9.5). This confirms the role of the correspondance quark up = 5 and \textit{quark d = 6 with a double structure}. It is an example of \textit{immergence}, i.e. deducing the small from the large, in a striking similitude between cosmology and nuclear physics. Another example was encontered in section 2.4, where dimensional analysis gives the visible Universe radius, in an easier way than the equivalent one for the Hydrogen atom radius, since for this case there is no evidence that $c$ must be left out.
 Elimination of $q$ leads to (2.6 \%):
-$$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$$
- In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
+$(R_{GC}/\lambdabar_e)^3 \approx 150^{137}$. 
+
+In Atiyah's last work the Bernoulli function $x/(1-e^{-x})$ is used. This is the kernel of the thermal Planck law. Indeed, considering the Wien reduced constant $w = hc/kT\lambda_{Wien} = 5 (1-e^{-w}) \approx 4.965114245$, one notes that $a \approx e^w -2\pi$, suggesting $a$ to be a trigonometric line. Indeed $cosa \approx 1/e$, and, to 65 ppb:
 \begin{equation}
 a \approx 44\pi - Arccos(1/e)
 \end{equation}
@@ -1028,16 +1018,15 @@ The corresponding value of $\pi$ in the last expression shows the fractional ser
 This corresponds to the above $G$ value to 10 ppb accuracy.
 Since $(R/\lambdabar_{e})^{2}$ is also close to $2^{256}$, within 1\%, this illustrates the following musical relation involving again 137:
 $$2^{1/155} \approx \pi^{1/256} \approx (2\pi)^{1/3 \times 137}$$
-The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}, in
-particular the $5^{th}$ 306 notes scale (about $\pi^{5}$), in conjunction with the canonical definition of the optimalscale e, encountered above.
+The scale with 155 notes is not known, but 137 appears also in the classical musical scales \cite{Sanchez1}. 
 
-One remarks that entire powers of $\pi$ appears in the 2 ppm Reilly formula: 
+whole powers of $\pi$ appears in the 2 ppm Reilly formula: 
 \begin{equation}
 a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {Four Forces Unification ppb Fine-Tuning}
+\subsection {The Four Forces Unification ppb Fine-Tuning}
 The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with propositions for extension towards strong nuclear force in Grand Unification Theory (GUT), but no synthesis have been possible with gravitational force. The Topologocal Axis shows clearlty that GUT with $1O^{16}$ GeV gauge boson seems confirmed. However, in section 4.2, it is proven that the Kotov oscillation reveals a symmetry between two apparently inconciliable domains: electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$, which was admitted to be:
 \begin{equation}
 p_G = \sqrt{pH} (p/H)^3/d_e
@@ -1057,14 +1046,13 @@ This relation is so striking that we ask the computer if it can find synthetic p
 \begin{equation}
 aF/\sqrt(pH) \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
-where $\mu$ is the Muon/Electron mass ratio, textit{inside its 20 ppb indetermination}, so proposing the value:
+where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb indetermination}, so proposing the value:
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
-
 Note that $n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
-development of $\pi$ is to this date an unsolved problem, \textit{This confirms that current mathematics is
+development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$}.
 
 These relations show a dual form, the first one without any numerical factor:
@@ -1075,13 +1063,13 @@ Now, as was recalled above, the exponents represent the number of
 dimensions. So, this represents a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
-Note that the strong force is represented by the Bizouard formula:
+Note that the strong force parameter $f$ is represented by the Bizouard formula:
 \begin{equation}
 F/\sqrt(pH) \approx 2\pi fpH/F
 \end{equation}
-The following weak boson ratios match (Eq. 1):
+The following weak boson ratios $W$ and $$Z match (Eq.1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
-\textit{in the ppb range}: 
+\textit{in the ppb range}. For the charged boson: 
 \begin{equation}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
@@ -1093,31 +1081,31 @@ confirming the holic attribution (section 6) of power 7 for a field parameter, a
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-this value is confirmed by its ppb liaison with the pariah group $J_3$
+confirmed by its ppb liaison with the Janko pariah group $J_3$
 \begin{equation}
 J_3 \approx 3\pi^2 Z^2 / (137^2 + \sqrt{1+d_e})
 \end{equation}
 This enligth a liaison between the monster and the $J_3$ cardinals, while these two groups have no known relations:
 \begin{equation}
-O_M \approx d_e J_3^7 sqrt(p/p_0)
+O_M \approx d_e J_3^7 \sqrt(p/p_0)
 \end{equation}
-\textit{The very existence of so precise ppb relations confirms there exists a Final Thory involvoing the sporadic groups}. The following section indicates additive hints towards this Final Theory.
+\textit{The very existence of so precise ppb relations confirms there exists a Final Theory involvoing the sporadic groups}. The following section indicates additive hints.
 
 
 \subsection {The Heavy Leptons Fine-Tuning}
-The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch (around 2001) during which its measurement was false to 3 $\sigma$. It can be wrote:
+The standard model is unable to explain why there are three famillies of particles. Thus, the study of the muon and tau mass ratios is crucial. Now, the following Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch (around 2000) during which its measurement was false to 3 $\sigma$. It can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-This Koide constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (39), which means that, to 2 ppm (with an additive term at 0.16 ppm):
+This Koide constant, that no one noticed, $p_K \approx 1842.604994$ has been detected in Eq. (31), which means that, to 2 ppm (with an additive term at 0.16 ppm):
 \begin{equation}
 p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e
 \end{equation}
-With the above $\mu$ value, $\tau is \approx 3477.441701$, a value which obeys, to 0.7 and -0.8 ppm:
+With the above $\mu$ value, $\tau \approx 3477.441701$, a value which obeys, to 0.7 and -0.8 ppm:
 \begin{equation}
 e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2 
 \end{equation}
-resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining an Brout-Englert-Higgs ratio $s$:
+resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining an Brout-Englert-Higgs ratio $s \approx 495.88^2$:
 $$
 \begin{array}{ll}
 %
